# Map-Tasker

./: .gitlab-ci.yml  Changelog.md  HELP.md  LICENSE  LICENSE.txt  MapTasker.html  MapTasker.py  MapTasker_Settings.toml  README.md  config.py  main.py  maptasker.py  maptasker_changelog.json  pyproject.toml  requirements.txt  sample.prj.xml
documentation_images/: loc.html
maptasker/: maptasker.py
maptasker/src/: __init__.py  actargs.py  action.py  actionc.py  actiond.py  actione.py  actionr.py  actiont.py  addcss.py  caveats.py  clip.py  colors.py  colrmode.py  condition.py  config.py  cria.py  ctk_color_picker.py  debug.py  deprecate.py  depricated.py  diagram.py  diagutil.py  dirout.py  error.py  fonts.py  format.py  frmthtml.py  frmtline.py  frontmtr.py  getbakup.py  getids.py  getputarg.py  getputer.py  globalvr.py  guimap.py  guiutils.py  guiwins.py  initparg.py  kidapp.py  lineout.py  (+36 more)
routines/: actargs.py  action.py  actionc.py  actiond.py  actione.py  actionr.py  actiont.py  caveats.py  colors.py  condition.py  depricated.py  getputarg.py  outputl.py  parsearg.py  proclist.py  profiles.py  progargs.py  progargss.py  proggui.py  proginit.py  projects.py  runcli.py  rungui.py  scenes.py  share.py  shellsort.py  sysconst.py  taskactn.py  taskerd.py  tasks.py  taskuniq.py  userintr.py  xmldata.py
sample_output/: MapTasker sample display-detail-level 0.html  MapTasker sample display-detail-level 1.html  MapTasker sample display-detail-level 2.html  MapTasker sample display-detail-level 3 with twisty.html  MapTasker sample display-detail-level 3.html
src/: MainItem.py  actargs.py  action.py  actionc.py  actione.py  actionr.py  actiont.py  caveats.py  colors.py  colrmode.py  condition.py  config.py  debug.py  getids.py  getputarg.py  initparg.py  kidapp.py  mapit.py  migrate.py  outputl.py  parsearg.py  prefers.py  priority.py  proclist.py  profiles.py  progargs.py  proginit.py  projects.py  runcli.py  rungui.py  scenes.py  servicec.py  share.py  shellsort.py  sysconst.py  taskactn.py  taskerd.py  tasks.py  taskuniq.py  userintr.py  (+1 more)
tests/: MapTasker.html  run_test.py
