[tool.poetry]
name = "maptasker"
version = "2.4.6"
description = "Utility to display your entire Android 'Tasker' configuration on your MAC."
authors = ["Michael Rubin <mikrubin@gmail.com>"]
readme = "README_PyPl.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/mctinker/Map-Tasker"
keywords = ["tasker", "Tasker", "map tasker"]
packages = [
    { include = "maptasker"}
]
include = ["**/maptasker/**/*.py"]
# How to include a data directory...
# include = ["**/maptasker/**/*.py", {path="**/clip/castles/ascii/**", format="sdist"}]
exclude = ["run_test.py", "**/maptasker/**/backup.xml", "**/maptasker/maptasker.log", "**/maptasker/MapTasker.html", "**/maptasker/.MapTasker_RunCount.txt", "**/maptasker/.arguments.txt", "**/maptasker/**/__pycache__", "**/maptasker/**/.dep-tree.yml"]

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.0"
ctkcolorpicker = "^0.8.0"
pillow = "^10.0.1"
darkdetect = "^0.8.0"
defusedxml = "^0.7.1"
requests = "^2.31.0"
packaging = "^23.2"

[tool.poetry.scripts]
maptasker = "maptasker.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mctinker/Map-Tasker/issues"
"Change Log" = "https://github.com/mctinker/Map-Tasker/CHANGELOG.md"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
line-length = 150

[tool.ruff.pycodestyle]
ignore-overlong-task-comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-mock = "*"
